Working on squashing grid bugs

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a {
 main {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(12, 1fr);
   gap: 20px;
   height: 100%;
   width: 100%;
@@ -67,16 +67,11 @@ main {
   height: 100%;
   width: 100%;
   grid-column: 1 / span 8;
-  grid-row: 1 / span 1;
+  grid-row: 1 / span 5;
 }
-
-.main-img > img {
-  object-fit: contain;
-}
-
 .new-section {
   grid-column: 9 / span 3;
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 8;
 }
 
 .new-content-container {
@@ -88,44 +83,48 @@ main {
 .new-content-container > h1 {
   font-size: 2rem;
   color: #e9ab53;
-  padding: 1.5rem;
+  padding: 1.2rem;
 }
 
 .new-content-container > h4 {
   color: #fff;
-  margin: 1.5rem;
+  margin: 1.2rem;
 }
 
 .new-content-container > p {
   color: #5d5f79;
-  margin: 1.5rem;
+  margin: 1.2rem;
 }
 
 hr {
   opacity: 0.2;
-  margin: 1.5rem;
+  margin: 1.2rem;
 }
 
 /*Styling for second row (excludes the part of the new container that spans 2 rows*/
 
 .main-article {
-  display: flex;
-  justify-content: space-between;
-  grid-column: 1 / span 8;
+  grid-column: 1 / span 8 ;
+  grid-row: 6 / span 3;
+  display: grid;
+  grid-template-rows: repeat(8, auto);
+  grid-template-columns: repeat(12, 1fr); 
+  gap: 20px; 
 }
 
 .main-article-heading > h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 800;
 }
 
 .main-article-heading {
-  width: 45%;
+  grid-column: 1 / span 6;
+  grid-row: 1 / span 8; 
 }
 
 .main-article-info {
-  width: 38%;
-  margin-top: 0.6rem;
+  grid-row:  1/ span 8; 
+  grid-column: 7 / span 6;
 }
 
 .red-rectangle {
